Changed the background and fixed the scrollbar color issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 body {
-    background-image: linear-gradient(to right, #0ea5e9, #6366f1);
-    /* background-image: url('https://images.unsplash.com/photo-1561485039-765c8e81686d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
+    background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #6dd5ed 100%);
+    color: #fff;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-attachment: fixed;
 
-    /* background-attachment: fixed; */
-    background-repeat: no-repeat;
+    /* overflow-x: hidden; */
+}
 
-    /* background-size: 100% 100%; */
-
-    /* float: left; */
-
-    /* width: auto; */
+.container {
+    width: 100vw;
+    min-height: 100vh;
+    background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #6dd5ed 100%);
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-attachment: fixed;
 }
